# sentinel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
data/eval/: golden.json
docker/: docker-compose.prod.yml  docker-compose.yml
scripts/: ingest_live.py  run_eval.py  run_pipeline.py
src/agents/: __init__.py  classifier.py  extractor.py  graph.py  state.py  synthesizer.py  verifier.py
src/api/: main.py
src/api/routes/: analysis.py  health.py  ingestion.py
src/api/static/: index.html
src/config/: logging.py  settings.py
src/eval/: __init__.py  metrics.py  runner.py  scorer.py
src/ingestion/: __init__.py  chunker.py  edgar.py  tasks.py
src/ingestion/parsers/: audio_parser.py  html_parser.py  image_parser.py  pdf_parser.py
src/models/: __init__.py  document.py  pipeline.py
src/parsers/: pdf.py
src/rag/: __init__.py  embedder.py  retriever.py  store.py
tests/unit/: test_chunker.py  test_models.py  test_pdf_parser.py  test_scorer.py
