[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Multimodal Financial Document Intelligence Pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Sriniketh"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # LLM / Agent orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    # RAG / Embeddings
    "llama-index>=0.11.0",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.0.0",
    # Document parsing
    "unstructured[pdf]>=0.15.0",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.9",
    # HF models
    "transformers>=4.44.0",
    "torch>=2.4.0",
    "huggingface-hub>=0.25.0",
    # Audio
    "openai-whisper>=20231117",
    # Eval
    "ragas>=0.2.0",
    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
